ProGuard Plugin end